@@ -1,26 +1,0 @@
-//
-//  Validation.h
-//  Calculator
-//	Validation
-//
-//  Created by Muhd Mirza on 14/1/14.
-//  Copyright (c) 2014 Muhd Mirza. All rights reserved.
-//
-
-#ifndef __Calculator__Validation__
-#define __Calculator__Validation__
-
-#include <iostream>
-
-using namespace std;
-
-class Validation {
-	public:
-		Validation();
-		
-		void validationError();
-	
-	private:
-};
-
-#endif /* defined(__Calculator__Validation__) */
